ERRORS.log
Traceback (most recent call last):
  File "D:\PYTHON\Kivy\kivyproject\main.py", line 36, in <module>
    KivyMDApp().run()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\app.py", line 950, in run
    runTouchApp()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 582, in runTouchApp
    EventLoop.mainloop()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 347, in mainloop
    self.idle()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\base.py", line 387, in idle
    Clock.tick()
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\clock.py", line 733, in tick
    self.post_idle(ts, self.idle())
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\clock.py", line 776, in post_idle
    self._process_events()
  File "kivy\_clock.pyx", line 616, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 649, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 645, in kivy._clock.CyClockBase._process_events
  File "kivy\_clock.pyx", line 218, in kivy._clock.ClockEvent.tick
  File "d:\PYTHON\Kivy\.kivy_compiled\lib\site-packages\kivy\clock.py", line 1095, in callback_func
    func(*args, **kwargs)
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\baseclass\authority_screen.py", line 114, in do_login
    self.manager.set_current("administrator", side="right")
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\root.py", line 31, in set_current
    exec(screen["import"])
  File "<string>", line 1, in <module>
  File "D:\PYTHON\Kivy\kivyproject\libs\uix\baseclass\admin_screen.py", line 728
    ok = MDApp.get_running_app().db.update_staff_detail(,
                                                        ^
SyntaxError: invalid syntax
